--- a/services/config.json
+++ b/services/config.json
@@ -1,6 +1,6 @@
 {
-  "blogTitle": "Lorem Ipsum",
-  "blogSubtitle": "lorem ipsum",
+  "blogTitle": "Betty Grof",
+  "blogSubtitle": "Oh My Glob",
   "article": {
     "tableOfContents": true 
   }
